Fix visual bug when podcasts wrap to second line

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -24,4 +24,5 @@ A {
 .podcast {
   float: left;
   padding: 10px;
+  height: 150px;
 }
